--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/*body {
+	background-image: url("../img/bg.jpg");
+	background-size: 100%;
+}
+*/
 h1 {
 	color: red;
 	font-size: 80px;
@@ -27,6 +32,15 @@ h3 {
 	font-weight: bolder;
 }
 
+#computer_picture {
+	-moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+}
+
 img {
 	margin-left: 50px;
 }
@@ -36,6 +50,20 @@ button {
 	color: white;
 	padding: 20px;
 	margin-left: 50px;
+	margin-top: 54px;
+	cursor: pointer;
+}
+
+.right {
+	float:right;
+}
+
+.left {
+	float: left;
+}
+
+.clear {
+	clear: both;
 }
 
 #try_again {
@@ -52,17 +80,12 @@ button {
 	margin-top: 0px;
 	color: black;
 	font-weight: bolder;
-	text-align: center;
 	font-size: 30px;
 	text-decoration: none;
-	padding-left: 190px;
+	text-align: center;
 }
 
 #result{
 	width: 15%;
 }
 
-body {
-	background-image: url("../img/bg.jpg");
-	background-size: 100%;
-}
