--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h1 {
 	color: red;
 	font-size: 80px;
 	font-family: Stencil;
-	margin-left: 50px;
+	margin-left: 150px;
 	margin-bottom: 10px;
 }
 
@@ -24,6 +24,11 @@ h3 {
 	color: red;
 	text-decoration: none;
 	font-weight: bolder;
+}
+
+.text_right {
+	text-align: right;
+	margin-right: 50px;
 }
 
 #computer_pick {
@@ -75,9 +80,13 @@ button {
 	display: none;
 }
 
+.inner_body {
+	padding: 0 100px;
+}
+
 #result_text {
 	text-transform: uppercase;
-	margin-top: 0px;
+	margin: 0 auto;
 	color: black;
 	font-weight: bolder;
 	font-size: 30px;
