--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ h1 {
 	margin-bottom: 10px;
 }
 
+h2 {
+	margin: 0 auto;
+	text-align: center;
+}
+
 h3 {
 	font-size: 20px;
 	font-family: Garamond;
@@ -18,6 +23,20 @@ h3 {
 	margin-bottom: 5px;
 	text-decoration: underline;
 	color: black;
+}
+h4 {
+	display: inline-block;
+	margin: 0;
+}
+
+.upper_body > img {
+	cursor: pointer;
+	margin-right: 20px;
+	padding: 5px;
+}
+
+.upper_body > img:hover {
+	border: 2px solid black;
 }
 
 #your_pick {
@@ -75,11 +94,6 @@ button {
 	display: block;
 	color: white;
 }
-
-#hidden {
-	display: none;
-}
-
 .inner_body {
 	padding: 0 100px;
 }
@@ -102,4 +116,14 @@ button {
 #result{
 	width: 15%;
 }
+
+#test_button {
+	color: white;
+}
+
+#hidden {
+	display: none;
+}
+
+
 
